comms sends objects

--- a/tests/send-json/index.html
+++ b/tests/send-json/index.html
@@ -15,7 +15,9 @@
     <p>Add JSON here:</p>
     <textarea id="json" rows="8" cols="80"></textarea><br>
     <div id="msgs"></div>
-    <button id="submit">Send</button><br>
+    <button id="submit">Send</button>
+    <label><input type="radio" name="method" value="GET" checked>GET</label>
+    <label><input type="radio" name="method" value="POST">POST</label><br>
     <pre><code id="results"></code></pre>
   </body>
 </html>
