--- a/tests/send-json/index.html
+++ b/tests/send-json/index.html
@@ -12,18 +12,17 @@
   </head>
   <body>
     <h1>Test Sending JSON</h1>
-    <table>
-      <tr>
-        <td>
-          <p>Add JSON here:</p>
-          <textarea id="json" rows="8" cols="80"></textarea><br>
-          <div id="msgs"></div>
-          <button id="submit">Send</button>
-          <label><input type="radio" name="method" value="GET" checked>GET</label>
-          <label><input type="radio" name="method" value="POST">POST</label><br>
-        </td>
-        <td>
-          <h3>Controller</h3>    <label><input type="radio" name="controller"
+    <div class="flexbox">
+      <div id="form-field" class="flexchild">
+        <h2>JSON</h2>
+        <textarea id="json"></textarea><br>
+        <div id="msgs"></div>
+        <button id="submit">Send</button>
+        <label><input type="radio" name="method" value="GET">GET</label>
+        <label><input type="radio" name="method" value="POST" checked>POST</label><br>
+      </div>
+      <div class="flexchild radiobox">
+          <h2>Controller</h2>    <label><input type="radio" name="controller"
             value="scheduler" checked>scheduler</label><br>
           <label><input type="radio" name="controller"
             value="announce">announce</label><br>
@@ -39,9 +38,33 @@
             value="train">train</label><br>
           <label><input type="radio" name="controller"
             value="television">television</label><br>
-        </td>
-      </tr>
-    </table>
+      </div class="flexchild">
+      <div class="flexchild buttonbox">
+        <h2>Commands</h2>
+        <div class="flexbox">
+          <div class="flexchild">
+            <h3>Shared</h3>
+            <button class="cmd-button" data-cmd="help">help</button><br>
+            <button class="cmd-button" data-cmd="reqStatus">reqStatus</button><br>
+            <button class="cmd-button" data-cmd="reqLog">reqLog</button><br>
+            <button class="cmd-button" data-cmd="setOff">setOff</button><br>
+            <button class="cmd-button" data-cmd="setOn">setOn</button><br>
+            <button class="cmd-button" data-cmd="setAuto">setAuto</button><br>
+            <button class="cmd-button" data-cmd="setGlitch">setGlitch</button><br>
+            <button class="cmd-button" data-cmd="setYear">setYear</button><br>
+          </div>
+          <div class="flexchild">
+            <h3>Unique</h3>
+            <button class="cmd-button" data-cmd="order">order</button><br>
+            <button class="cmd-button" data-cmd="reqTrains">reqTrains</button><br>
+            <button class="cmd-button" data-cmd="setAnnounce">setAnnounce</button><br>
+            <button class="cmd-button" data-cmd="setGo">setGo</button><br>
+            <button class="cmd-button" data-cmd="setStop">setStop</button><br>
+            <button class="cmd-button" data-cmd="setTrain">setTrain</button><br>
+          </div>
+        </div>
+      </div>
+    </div>
     <pre><code id="results"></code></pre>
   </body>
 </html>
