setTrain and reqAllTrains methods for scheduler

--- a/tests/send-json/index.html
+++ b/tests/send-json/index.html
@@ -57,6 +57,7 @@
             <h3>Unique</h3>
             <button class="cmd-button" data-cmd="order">order</button><br>
             <button class="cmd-button" data-cmd="reqTrains">reqTrains</button><br>
+            <button class="cmd-button" data-cmd="reqAllTrains">reqAllTrains</button><br>
             <button class="cmd-button" data-cmd="setAnnounce">setAnnounce</button><br>
             <button class="cmd-button" data-cmd="setGo">setGo</button><br>
             <button class="cmd-button" data-cmd="setStop">setStop</button><br>
