--- a/experiments/video/just-vlc-test.html
+++ b/experiments/video/just-vlc-test.html
@@ -9,7 +9,7 @@
       <h1>Just VLC Test Control</h1>
       <form method="GET" action="http://localhost/status.json">
         <input type=input name="command" value="in_play"><br>
-        <input type=input name="input"><br>
+        <input type=input name="input" value="file://Videos/example.mov"><br>
         <input type=submit>
       </form>
     </main>
