--- a/experiments/video/just-vlc-test.html
+++ b/experiments/video/just-vlc-test.html
@@ -11,7 +11,8 @@
     <main id="content">
       <h1>Just VLC Test Control</h1>
       Username: <input tpye="input" name="username" value=""><br>
-      Password: <input tpye="input" name="password" value="vlc"><br>
+      Password: <input tpye="input" name="password" value="vlc"><br><br>
+      Endpoint: <input type="input" name="endpoint" value="status.json"><br>
       Command: <input type="input" name="command" value="in_play"><br>
       Input: <input type="input" name="input" value="file://Videos/example.mov"><br>
       <input id="submit" type="submit">
