--- a/scheduler/static/json.html
+++ b/scheduler/static/json.html
@@ -8,10 +8,10 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"></script>
     <script type="text/javascript" src="send-json.js" defer ></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="json.css">
   </head>
   <body>
-    <h1>Test Sending JSON</h1>
+    <h1>Test Sending JSON 1</h1>
     <div class="flexbox">
       <div id="form-field" class="flexchild">
         <h2>JSON</h2>
