--- a/scheduler/static/json.html
+++ b/scheduler/static/json.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Test Sending JSON</title>
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"></script>
-    <script type="text/javascript" src="send-json.js" defer ></script>
-    <link rel="stylesheet" href="json.css">
+    <link rel="stylesheet" href="css/json.css">
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/send-json.js" defer ></script>
   </head>
   <body>
-    <h1>Test Sending JSON 1</h1>
+    <h1>Test Sending JSON</h1>
     <div class="flexbox">
       <div id="form-field" class="flexchild">
         <h2>JSON</h2>
