--- a/scheduler/static/panel.html
+++ b/scheduler/static/panel.html
@@ -87,13 +87,13 @@
         <section class="meta-group2">
           <section class="group currents">
             <div class="time">
-              Current: <span id="time-current"></span>
+              Current Time: <span id="time-current"></span>
             </div>
             <div class="time">
-              Est Timeslip: <span id="time-slip"></span>
+              Time Until Timeslip: <span id="time-slip"></span>
             </div>
             <div class="train">
-              Next Train: <span id="time-train"></span>
+              Time Until Next Train: <span id="time-train"></span>
             </div>
             <div class="time">
               <div id="next-train">Searching...</div>
