--- a/scheduler/static/panel.html
+++ b/scheduler/static/panel.html
@@ -89,6 +89,9 @@
             <div class="time">
               Current Time: <span id="time-current"></span>
             </div>
+            <div class="year">
+              Current Year: <span id="current-year"></span>
+            </div>
             <div class="time">
               Time Until Timeslip: <span id="time-slip"></span>
             </div>
