--- a/scheduler/static/panel.html
+++ b/scheduler/static/panel.html
@@ -25,28 +25,28 @@
                 <div class="controller scheduler row">
                   <div class="con-name col-sm-6">Scheduler</div>
                   <div class="col-sm-6">
-                    <button class="btn btn-secondary" data-btn="scheduler">
+                    <button class="btn btn-secondary" data-contr="scheduler">
                       Unknown</button>
                   </div>
                 </div>
                 <div class="controller announce row">
                   <div class="con-name col-sm-6">Announce</div>
                   <div class="col-sm-6">
-                    <button class="btn btn-secondary" data-btn="announce">
+                    <button class="btn btn-secondary" data-contr="announce">
                       Unknown</button>
                   </div>
                 </div>
                 <div class="controller bridge row">
                   <div class="con-name col-sm-6">Bridge</div>
                   <div class="col-sm-6">
-                    <button class="btn btn-secondary" data-btn="bridge">
+                    <button class="btn btn-secondary" data-contr="bridge">
                       Unknown</button>
                   </div>
                 </div>
                 <div class="controller crossing row">
                   <div class="con-name col-sm-6">Crossing</div>
                   <div class="col-sm-6">
-                    <button class="btn btn-secondary" data-btn="crossing">
+                    <button class="btn btn-secondary" data-contr="crossing">
                       Unknown</button>
                   </div>
                 </div>
@@ -55,28 +55,28 @@
                 <div class="controller lights row">
                   <div class="con-name col-sm-6">Lights</div>
                   <div class="col-sm-6">
-                    <button class="btn btn-secondary" data-btn="lights">
+                    <button class="btn btn-secondary" data-contr="lights">
                       Unknown</button>
                   </div>
                 </div>
                 <div class="controller radio row">
                   <div class="con-name col-sm-6">Radio</div>
                   <div class="col-sm-6">
-                    <button class="btn btn-secondary" data-btn="radio">
+                    <button class="btn btn-secondary" data-contr="radio">
                       Unknown</button>
                   </div>
                 </div>
                 <div class="controller television row">
                   <div class="con-name col-sm-6">Television</div>
                   <div class="col-sm-6">
-                    <button class="btn btn-secondary" data-btn="television">
+                    <button class="btn btn-secondary" data-contr="television">
                       Unknown</button>
                   </div>
                 </div>
                 <div class="controller train row">
                   <div class="con-name col-sm-6">Train</div>
                   <div class="col-sm-6">
-                    <button class="btn btn-secondary" data-btn="train">
+                    <button class="btn btn-secondary" data-contr="train">
                       Unknown</button>
                   </div>
                 </div>
@@ -107,7 +107,7 @@
               Loading panel...
             </div>
             <div class="alert alert-dark" id="alert-calls">
-              No calls at this time.
+              No current calls...
             </div>
           </section>
           <section class="group">
@@ -115,19 +115,19 @@
             <p class="note">Trigger a train arrival.</p>
             <div id="trains">
               <div>
-                <button class="btn btn-light" data-btn="freight-through">
+                <button class="btn btn-light" data-call="frt-through">
                   Frt Thru</button>
               </div>
               <div>
-                <button class="btn btn-light" data-btn="freight-stop">
+                <button class="btn btn-light" data-call="frt-stop">
                   Frt Stop</button>
               </div>
               <div>
-                <button class="btn btn-light" data-btn="pass-through">
+                <button class="btn btn-light" data-call="psgr-through">
                   Psgr Thru</button>
               </div>
               <div>
-                <button class="btn btn-light" data-btn="pass-through">
+                <button class="btn btn-light" data-call="psgr-stop">
                   Psgr Stop</button>
               </div>
             </div>
@@ -137,35 +137,35 @@
             <p class="note">Trigger a timeslip.</p>
             <div id="years">
               <div>
-                <button class="btn btn-light" data-btn="1852">
-                  1852</button>
+                <button class="btn btn-light" data-year="1858">
+                  1858</button>
               </div>
               <div>
-                <button class="btn btn-light" data-btn="1888">
+                <button class="btn btn-light" data-year="1888">
                   1888</button>
               </div>
               <div>
-                <button class="btn btn-light" data-btn="1938">
+                <button class="btn btn-light" data-year="1938">
                   1938</button>
               </div>
               <div>
-                <button class="btn btn-light" data-btn="1959">
+                <button class="btn btn-light" data-year="1959">
                   1959</button>
               </div>
               <div>
-                <button class="btn btn-light" data-btn="1982">
+                <button class="btn btn-light" data-year="1982">
                   1982</button>
               </div>
               <div>
-                <button class="btn btn-light" data-btn="2014">
+                <button class="btn btn-light" data-year="2014">
                   2014</button>
               </div>
               <div>
-                <button class="btn btn-light" data-btn="2066">
+                <button class="btn btn-light" data-year="2066">
                   2066</button>
               </div>
               <div>
-                <button class="btn btn-light" data-btn="2110">
+                <button class="btn btn-light" data-year="2110">
                   2110</button>
               </div>
             </div>
