--- a/scheduler/static/panel.html
+++ b/scheduler/static/panel.html
@@ -9,11 +9,15 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/panel.js" defer ></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <main class="container-fluid">
       <section id="title-section" class="group">
         <h1>BRS Control Panel</h1>
+        <a id=links href="json.html">
+          <button class="btn">JSON &gt;&gt;</button>
+        </a>
       </section>
       <section id="meta-meta-group">
         <section id="meta-group" class="meta-group1">
