--- a/scheduler/static/json.html
+++ b/scheduler/static/json.html
@@ -15,8 +15,7 @@
     <main class="container-fluid">
       <section id="title-section" class="group">
         <h1>BRS JSON Interface</h1>
-        <a id=links href="panel.html">
-          <button class="btn">Panel &gt;&gt;</button>
+          <button id=links class="btn"><a href="panel.html">Panel &gt;&gt;</a></button>
         </a>
       </section>
       <section class="group">
