--- a/scheduler/static/panel.html
+++ b/scheduler/static/panel.html
@@ -14,10 +14,8 @@
   <body>
     <main class="container-fluid">
       <section id="title-section" class="group">
-        <h1>BRS Control Panel</h1>
-        <a id=links href="json.html">
-          <button class="btn">JSON &gt;&gt;</button>
-        </a>
+        <h1>BRS Control Panel</h1>s
+          <button class="btn"><a id=links href="json.html">JSON &gt;&gt;</a></button>
       </section>
       <section id="meta-meta-group">
         <section id="meta-group" class="meta-group1">
