--- a/scheduler/static/json.html
+++ b/scheduler/static/json.html
@@ -15,7 +15,7 @@
     <main class="container-fluid">
       <section id="title-section" class="group">
         <h1>BRS JSON Interface</h1>
-          <button id=links class="btn"><a href="panel.html">Panel &gt;&gt;</a></button>
+          <a id=links href="panel.html" class="btn btn-light">Panel &gt;&gt;</a>
         </a>
       </section>
       <section class="group">
