--- a/scheduler/static/json.html
+++ b/scheduler/static/json.html
@@ -15,7 +15,7 @@
     <main class="container-fluid">
       <section id="title-section" class="group">
         <h1>BRS Data Interface</h1>
-          <a id=links href="panel.html" class="btn btn-light">Panel &gt;&gt;</a>
+          <a id=links href="panel.html" class="btn btn-secondary">Panel &gt;&gt;</a>
         </a>
       </section>
       <section class="group">
@@ -24,7 +24,7 @@
             <h2>JSON</h2>
             <textarea id="json"></textarea><br>
             <div id="msgs"></div>
-            <button id="submit" class="btn btn-light">Send</button>
+            <button id="submit" class="btn btn-secondary">Send</button>
             <label><input type="radio" name="method" value="GET">GET</label>
             <label><input type="radio" name="method" value="POST" checked>POST</label><br>
           </div>
@@ -51,24 +51,24 @@
             <div class="flexbox">
               <div class="flexchild">
                 <h3>Shared</h3>
-                <button class="btn btn-light cmd-button" data-cmd="help">help</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="reqStatus">reqStatus</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="reqLog">reqLog</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="setOff">setOff</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="setOn">setOn</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="setAuto">setAuto</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="setGlitch">setGlitch</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="setYear">setYear</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="help">help</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="reqStatus">reqStatus</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="reqLog">reqLog</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="setOff">setOff</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="setOn">setOn</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="setAuto">setAuto</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="setGlitch">setGlitch</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="setYear">setYear</button><br>
               </div>
               <div class="flexchild">
                 <h3>Unique</h3>
-                <button class="btn btn-light cmd-button" data-cmd="order">order</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="reqTrains">reqTrains</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="reqAllTrains">reqAllTrains</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="setAnnounce">setAnnounce</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="setGo">setGo</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="setStop">setStop</button><br>
-                <button class="btn btn-light cmd-button" data-cmd="setTrain">setTrain</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="order">order</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="reqTrains">reqTrains</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="reqAllTrains">reqAllTrains</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="setAnnounce">setAnnounce</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="setGo">setGo</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="setStop">setStop</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="setTrain">setTrain</button><br>
               </div>
             </div>
           </div>
