--- a/scheduler/static/panel.html
+++ b/scheduler/static/panel.html
@@ -15,7 +15,7 @@
     <main class="container-fluid">
       <section id="title-section" class="group">
         <h1>BRS Control Panel</h1>
-          <a id=links href="json.html" class="btn btn-light">JSON &gt;&gt;</a>
+          <a id=links href="json.html" class="btn btn-secondary">JSON &gt;&gt;</a>
       </section>
       <section id="meta-meta-group">
         <section id="meta-group" class="meta-group1">
@@ -138,38 +138,6 @@
             <h2>Timeslip Call</h2>
             <p class="note">Trigger a timeslip.</p>
             <div id="years">
-              <div>
-                <button class="btn btn-light" data-year="1858">
-                  1858</button>
-              </div>
-              <div>
-                <button class="btn btn-light" data-year="1888">
-                  1888</button>
-              </div>
-              <div>
-                <button class="btn btn-light" data-year="1938">
-                  1938</button>
-              </div>
-              <div>
-                <button class="btn btn-light" data-year="1959">
-                  1959</button>
-              </div>
-              <div>
-                <button class="btn btn-light" data-year="1982">
-                  1982</button>
-              </div>
-              <div>
-                <button class="btn btn-light" data-year="2014">
-                  2014</button>
-              </div>
-              <div>
-                <button class="btn btn-light" data-year="2066">
-                  2066</button>
-              </div>
-              <div>
-                <button class="btn btn-light" data-year="2110">
-                  2110</button>
-              </div>
             </div>
           </section>
         </section>
