Adding stateOn/stateOff to crossing controller

--- a/scheduler/static/json.html
+++ b/scheduler/static/json.html
@@ -68,6 +68,8 @@
                 <button class="btn btn-secondary cmd-button" data-cmd="setAnnounce">setAnnounce</button><br>
                 <button class="btn btn-secondary cmd-button" data-cmd="setGo">setGo</button><br>
                 <button class="btn btn-secondary cmd-button" data-cmd="setStop">setStop</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="stateOn">stateOn</button><br>
+                <button class="btn btn-secondary cmd-button" data-cmd="stateOff">stateOff</button><br>
                 <button class="btn btn-secondary cmd-button" data-cmd="setTrain">setTrain</button><br>
               </div>
             </div>
