improved panel/data;train & schedule length checking

--- a/scheduler/static/panel-local.html
+++ b/scheduler/static/panel-local.html
@@ -8,15 +8,15 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/shared.js" defer ></script>
-    <script src="js/panel.js" defer ></script>
+    <script src="js/shared-local.js" defer ></script>
+    <script src="js/panel-local.js" defer ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <main class="container-fluid">
       <section id="title-section" class="group">
         <h1>BRS Control Panel</h1>
-          <a id=links href="data.html" class="btn btn-secondary">Data &gt;&gt;</a>
+          <a id=links href="data-local.html" class="btn btn-secondary">Data &gt;&gt;</a>
       </section>
       <section id="meta-meta-group">
         <section id="meta-group" class="meta-group1">
