--- a/scheduler/static/data.html
+++ b/scheduler/static/data.html
@@ -2,13 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Test Sending JSON</title>
+    <title>Data Interface</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/json.css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/json.js" defer ></script>
+    <script src="js/shared.js" defer ></script>
+    <script src="js/data.js" defer ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
