Edited trainhoppers guide

--- a/experiments/web/ccguide/index.html
+++ b/experiments/web/ccguide/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Guide to Urban Camping</title>
+    <title>The Trainhoppers Guide to the Future (and the Past)</title>
     <link rel="stylesheet" href="cc-guide.css">
     <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -14,7 +14,30 @@
   <body>
     <div id="content">
 
-      <p id="title">An Alternative Travel Guide to Catchouts, Crew Changes, Automated Refueling Stations, and Temporal Anomalies Throughout the Former United States and Canada</p>
+      <div id="title-page">
+        <div id="title">
+          The Trainhoppers Guide<br>
+          to the Future<br>
+          (and the Past)
+        </div>
+        <div id="subtitle">
+          An Alternative Travel Guide to Catchouts, Crew Changes,
+          Automated Refueling Stations, and Temporal Anomalies
+          Throughout the Former United States and Canada
+        </div>
+        <div id="author">
+          2104 Edition<br>
+          RT and Co.
+        </div>
+      </div>
+
+      <div class="header">
+        <div>CCG 2104</div>
+        <div>2104 RT & Co. - Page 2</div>
+      </div>
+      <hr>
+
+      <p id="title2">An Alternative Travel Guide to Catchouts, Crew Changes, Automated Refueling Stations, and Temporal Anomalies Throughout the Former United States and Canada</p>
 
       <p>This is the 2104 edition of the crew change with Big Cakes' Basic Guide published over a hundred years ago in 1993. We keep it in print as informed riders can use temporal anomalies to take advantage of rail travel from a variety of eras. It includes revisions and new info on yards and crew change points throughout the former US and Canada. Rail operations are constantly changing. We include as many updates as we can but there are still many locations we didn't get updates on from others and didn't have time to research on our own. Some info is sure to be applicable only within a particular temporal location -- especially specific train schedules/times, local bus routes, and landmarks. Treat info about anomolies with the greatest of care. We generally try to date <span class="year">(2036)</span> specific info so you can see how recent we received it.</p>
 
@@ -89,6 +112,8 @@
       <p><strong>Final warning! The anomolies listed here are sometimes based on the thinnest of rumor. For obvious reasons, locals often deliberately try to keep them on the D.L. or obfuscate their locations with counter-rumor. Therefore, use this info at your own risk. Be aware that these locations often travel unpredictably (sometimes on long intervals) and returning to your own temporal position can be difficult or impossible. Always travel (and pack appropriately) with the expectation that you may not return home.</strong></p>
 
       <p>&nbsp;</p>
+
+      <hr>
 
       <h2>State/Province Listings:</h2>
 
